# gonini

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: DRAFT_DPD_2026-07-16.md
gonini/: __init__.py  __main__.py  cli.py  config.py  db.py  digest.py  models.py  reconcile.py  seed.py  taxonomy.py  util.py
gonini/llm/: __init__.py  anthropic_client.py  base.py  json_utils.py  mock.py  openrouter_client.py  retry.py  shared.py
